tests/messages/valid/adt_a01.hl7
MSH|^~\&|SEND_APP|SEND_FAC|RECV_APP|RECV_FAC|20260220131200||ADT^A01|MSG0001|P|2.3
EVN|A01|20260220131200
PID|1||1001^^^HOSP^MR||Sample^Max^M||19800101|M|||1 Test Street^^Springfield^IL^62701^US||555-12345678|||M
PV1|1|I|ICU^Bed 1^Room 3||||1234^Doctor^Andrew
