tests/messages/errors/err_missing_pv1.hl7
MSH|^~\&|SEND_APP|SEND_FAC|RECV_APP|RECV_FAC|20260220135000||ADT^A01|MSG0008|P|2.3
EVN|A01|20260220135000
PID|1||2001^^^HOSP^MR||Test^NoPV1||19900601|M
